--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+
     <title>Adediwura-Seo writer</title>
   </head>
   <body>
@@ -20,11 +28,14 @@
         <h2>Adediwura</h2>
       </div>
       <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#reviews">Reviews</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li>
+   <i class="fa-solid fa-house"></i>&nbsp;
+          <a href="#hero">Home</a>
+        </li>
+        <li><i class="fa-solid fa-user"></i>&nbsp;<a href="#about">About</a></li>
+        <li><i class="fa-solid fa-pen-nib"></i>&nbsp;<a href="#services">Services</a></li>
+        <li><i class="fa-regular fa-star"></i>&nbsp;<a href="#reviews">Reviews</a></li>
+        <li><i class="fa-solid fa-envelope"></i>&nbsp;<a href="#contact">Contact</a></li>
       </ul>
       <div class="ham">
         <a href="https://wa.link/7d24cp" target="_blank" class="walink"
@@ -72,19 +83,26 @@
           <h2>About Me</h2>
           <br />
           <p>
-            A creative wordsmith with 2+ years of experience in crafting
-            compelling narratives that resonate with diverse audience.
+            <span class="one">
+              A creative wordsmith with 2+ years of experience in crafting
+              compelling narratives that resonate with diverse audience.
+            </span>
             <br />
             <br />
-            From crafting engaging blog posts on "leading yourself as a student"
-            to writing transformative content "on the power of the mind", I am
-            committed to using my words to inform, inspire, and entertain.
+            <span class="two">
+              From crafting engaging blog posts on "leading yourself as a
+              student" to writing transformative content "on the power of the
+              mind", I am committed to using my words to inform, inspire, and
+              entertain.
+            </span>
             <br />
             <br />
-            Scroll down and you will find exceptional samples of what I can do
-            for you and it is not limited to that; I am ready to get on a free
-            discovery call with you to discuss your brand needs and offer you a
-            tailored service to suit that need
+            <span class="three">
+              Scroll down and you will find exceptional samples of what I can do
+              for you and it is not limited to that; I am ready to get on a free
+              discovery call with you to discuss your brand needs and offer you
+              a tailored service to suit that need
+            </span>
           </p>
           <br />
           <br />
@@ -206,7 +224,10 @@
                 strong online presence with engaging content, audience growth
                 strategies, and performance-driven campaigns. From content
                 creation to analytics, I ensure your social media works for your
-                brand, boosting engagement and conversions
+                brand, boosting engagement and conversions and also making your
+                future clients engrossed in your content which helps to build
+                trust and also boost your engagement on all social media
+                platforms
               </p>
             </div>
             <div class="btn">
@@ -219,29 +240,44 @@
       </div>
     </section>
     <section class="blogs">
-      <h2>Blog Posts</h2>
+      <h2>Portfolio</h2>
       <div class="container">
-        <iframe
-          src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid0tZFMuh2hW2E4FkEQA6L1aH7N1myCec2HiYEwnMb19x8QpG1F6MtBaRYf9LkTX6pdl&show_text=true&width=500"
-          width="250"
-          height="250"
-          style="border: none; overflow: hidden"
-          scrolling="no"
-          frameborder="0"
-          allowfullscreen="true"
-          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-        ></iframe>
-        <iframe
-          src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid0tZFMuh2hW2E4FkEQA6L1aH7N1myCec2HiYEwnMb19x8QpG1F6MtBaRYf9LkTX6pdl&show_text=true&width=500"
-          width="500"
-          height="250"
-          style="border: none; overflow: hidden"
-          scrolling="no"
-          frameborder="0"
-          allowfullscreen="true"
-          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-        ></iframe>
-        <iframe
+        <div class="cardm">
+          <div class="img">
+            <iframe
+              src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid0tZFMuh2hW2E4FkEQA6L1aH7N1myCec2HiYEwnMb19x8QpG1F6MtBaRYf9LkTX6pdl&show_text=true&width=500"
+              width="500"
+              height="250"
+              style="border: none; overflow: hidden"
+              scrolling="no"
+              frameborder="0"
+              allowfullscreen="true"
+              allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+            ></iframe>
+          </div>
+          <hr/>
+          <div class="middle">
+            <p>facebook</p>
+          </div>
+              <hr/>
+          <div class="big_text">
+            <h3>Boot Class</h3>
+          </div>
+          <div class="small_txt">
+            <p>
+              Every champion today was once a contender who refuses to give up."
+              - He len Hayes You will agree with me that most of the
+              world-changing intentions in human history were wrought because
+              some people...
+            </p>
+          </div>
+          <div class="btn">
+            <button class="short-pad">R<a href="#">Read More</a></button>
+          </div>
+        </div>
+        <div class="cardm">
+          <div class="img">
+          <iframe
           src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid02oZx3PbqYpTqZ4uaTvhwPBEKCzLgtMog431ieUYfg3GymYz3kssxTZpgXa3bNSe44l&show_text=true&width=500"
           width="500"
           height="250"
@@ -251,7 +287,30 @@
           allowfullscreen="true"
           allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
         ></iframe>
-        <iframe
+          </div>
+              <hr/>
+          <div class="middle">
+            <p>facebook</p>
+          </div>
+              <hr/>
+          <div class="big_text">
+            <h3>Boot Class</h3>
+          </div>
+          <div class="small_txt">
+            <p>
+              Every champion today was once a contender who refuses to give up."
+              - He len Hayes You will agree with me that most of the
+              world-changing intentions in human history were wrought because
+              some people...
+            </p>
+          </div>
+          <div class="btn">
+            <button class="short-pad">R<a href="#">Read More</a></button>
+          </div>
+        </div>
+        <div class="cardm">
+          <div class="img">
+         <iframe
           src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid02AEy8fuyLpZ3tBRidkhy1QwKb9weX2cQQ6Dko7z27vLssMeBTV7UQhynPEgSy2PP8l&show_text=true&width=500"
           width="500"
           height="250"
@@ -261,7 +320,30 @@
           allowfullscreen="true"
           allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
         ></iframe>
-        <iframe
+          </div>
+              <hr/>
+          <div class="middle">
+            <p>facebook</p>
+          </div>
+          <hr/>
+          <div class="big_text">
+            <h3>Boot Class</h3>
+          </div>
+          <div class="small_txt">
+            <p>
+              Every champion today was once a contender who refuses to give up."
+              - He len Hayes You will agree with me that most of the
+              world-changing intentions in human history were wrought because
+              some people...
+            </p>
+          </div>
+          <div class="btn">
+            <button class="short-pad">R<a href="#">Read More</a></button>
+          </div>
+        </div>
+        <div class="cardm">
+          <div class="img">
+          <iframe
           src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid03jRunWkcstQC9Y4JAsyTkHLsZLyoiuMq5gaw3hwYYeUwM8f3yXwNv2xNuHUDD1M1l&show_text=true&width=500"
           width="500"
           height="250"
@@ -271,7 +353,63 @@
           allowfullscreen="true"
           allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
         ></iframe>
-        <iframe
+          </div>
+              <hr/>
+          <div class="middle">
+            <p>facebook</p>
+          </div>
+          <hr/>
+          <div class="big_text">
+            <h3>Boot Class</h3>
+          </div>
+          <div class="small_txt">
+            <p>
+              Every champion today was once a contender who refuses to give up."
+              - He len Hayes You will agree with me that most of the
+              world-changing intentions in human history were wrought because
+              some people...
+            </p>
+          </div>
+          <div class="btn">
+       <button class="short-pad">R<a href="#">Read More</a></button>
+          </div>
+        </div>
+        <div class="cardm">
+          <div class="img">
+           <iframe
+          src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid03jRunWkcstQC9Y4JAsyTkHLsZLyoiuMq5gaw3hwYYeUwM8f3yXwNv2xNuHUDD1M1l&show_text=true&width=500"
+          width="500"
+          height="250"
+          style="border: none; overflow: hidden"
+          scrolling="no"
+          frameborder="0"
+          allowfullscreen="true"
+          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+        ></iframe>
+          </div>
+              <hr/>
+          <div class="middle">
+            <p>facebook</p>
+          </div>
+          <hr/>
+          <div class="big_text">
+            <h3>Boot Class</h3>
+          </div>
+          <div class="small_txt">
+            <p>
+              Every champion today was once a contender who refuses to give up."
+              - He len Hayes You will agree with me that most of the
+              world-changing intentions in human history were wrought because
+              some people...
+            </p>
+          </div>
+          <div class="btn">
+           <button class="short-pad">R<a href="#">Read More</a></button>
+          </div>
+        </div>
+        <div class="cardm">
+          <div class="img">
+      <iframe
           src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Fthebootclass%2Fposts%2Fpfbid05zowJKhVi1VgvRPPwXdthZcfkUNdQmjt4tS7H84Uc4mTu233877aG28ZYL1DGbyhl&show_text=true&width=500"
           width="500"
           height="250"
@@ -281,8 +419,28 @@
           allowfullscreen="true"
           allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
         ></iframe>
-        
-        
+          </div>
+          <hr/>
+          <div class="middle">
+            <p>facebook</p>
+          </div>
+          <hr/>
+          <div class="big_text">
+            <h3>Boot Class</h3>
+          </div>
+          <div class="small_txt">
+            <p>
+              Every champion today was once a contender who refuses to give up."
+              - He len Hayes You will agree with me that most of the
+              world-changing intentions in human history were wrought because
+              some people...
+            </p>
+          </div>
+          <div class="btn">
+   <button class="short-pad">R<a href="#">Read More</a></button>
+          </div>
+        </div>
+
       </div>
     </section>
     <script src="script.js"></script>
