--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </div>
     </section>
     <section class="blogs">
-      <h2>Portfolio</h2>
+      <h2 class="gg">Portfolio</h2>
       <div class="container">
         <div class="cardm">
           <div class="img">
