--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container hero-cont">
         <div class="first_side">
           <h1>Adediwura Afolabi</h1>
-          <h2>SEO Content Writer || Content Writer || Storyteller</h2>
+          <h2 id="element">SEO Content Writer || Content Writer || Storyteller</h2>
           <p>
             Are you a B2C service provider, entrepreneur, or CEO drowning in
             content creation? Tired of the endless cycle of writing, editing,
