--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container hero-cont">
         <div class="first_side">
           <h1>Adediwura Afolabi</h1>
-          <h2>I am a &nbsp; <span id="element"></span>
+          <h2>I am a <span id="element"></span>
 </h2>
           <p>
             Are you a B2C service provider, entrepreneur, or CEO drowning in
