--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="hero">
       <div class="container hero-cont">
         <div class="first_side">
-          <h1>Adediwura Afolabi</h1>
+          <h1 class="you">Adediwura Afolabi</h1>
           <h2>I am a <span id="element"></span>
 </h2>
           <p>
@@ -116,7 +116,7 @@
     </section>
     <section class="services">
       <div class="container">
-        <h2>My Services</h2>
+        <h2 class="chan" >My Services</h2>
         <p>
           Creating compelling content that informs, engages, and converts. From
           articles and blogs to social media content and video scripts—let’s
