--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <title>Adediwura-Seo writer</title>
   </head>
   <body>
-    <nav>
+    <nav class="nn">
       <div class="logo">
-        <h2>Adediwura</h2>
+        <h2 >Adediwura</h2>
       </div>
       <ul>
         <li>
@@ -57,15 +57,16 @@
           <h2>I am a <span id="element"></span>
 </h2>
           <p>
-            Are you a B2C service provider, entrepreneur, or CEO drowning in
+          <span class="one">  Are you a B2C service provider, entrepreneur, or CEO drowning in
             content creation? Tired of the endless cycle of writing, editing,
-            posting and still not getting results? I am a seasoned content
+            posting and still not getting results?</span> <br/> <span class="two">I am a seasoned content
             writer with 3+ years of experience in crafting engaging blog posts,
             newsletters, carousel's content, and strategic content calendars for
-            events’ promotion, authority building and 10X sales. Let me take the
+            events’ promotion, authority building and 10X sales.</span>
+            <br/><span class="three"> Let me take the
             content burden off your shoulders so you can focus on what you do
-            best; click the link below and let's create a content strategy that
-            will deliver your desired results.
+            best; click the button below and let's create a content strategy that
+            will deliver your desired results.</span>
           </p>
           <div class="btn">
             <button class="short-pad"><a href="#">Contact Me</a></button>
@@ -82,7 +83,7 @@
           <img src="IMG-20250113-WA0112.jpg" alt="" />
         </div>
         <div class="sec-slide">
-          <h2>About Me</h2>
+          <h2 class="you">About Me</h2>
           <br />
           <p>
             <span class="one">
