--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+          <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
     <link rel="stylesheet" href="style.css" />
 
     <title>Adediwura-Seo writer</title>
@@ -80,7 +84,7 @@
     <section class="about">
       <div class="container">
         <div class="first-slide">
-          <img src="IMG-20250113-WA0112.jpg" alt="" />
+          <img src="IMG-20250113-WA0112.jpg" alt="" loading="lazy"/>
         </div>
         <div class="sec-slide">
           <h2 class="you">About Me</h2>
@@ -128,7 +132,7 @@
             <div class="card_img">
               <img
                 src="laptop-notebook-wooden-desk.jpg"
-                alt="content-writing img"
+                alt="content-writing img" loading="lazy"
               />
             </div>
             <hr />
@@ -155,7 +159,7 @@
             <div class="card_img">
               <img
                 src="top-view-cloud-with-word-seo.jpg"
-                alt="content-writing img"
+                alt="content-writing img" loading="lazy"
               />
             </div>
             <hr />
@@ -183,7 +187,7 @@
             <div class="card_img">
               <img
                 src="person-writing-notebook-table-with-laptop.jpg"
-                alt="content-writing img"
+                alt="content-writing img" loading="lazy"
               />
             </div>
             <hr />
@@ -213,7 +217,7 @@
             <div class="card_img">
               <img
                 src="a_dynamic_workspace_centered_around_social_media_content_creation_featuring_an_individual_enthusias_mlgr68b8iv50uwtzlsd9_0.png"
-                alt="content-writing img"
+                alt="content-writing img" loading="lazy"
               />
             </div>
             <hr />
@@ -275,7 +279,7 @@
             </p>
           </div>
           <div class="btn">
-            <button class="short-pad">R<a href="#">Read More</a></button>
+            <button class="short-pad"><a href="https://web.facebook.com/share/p/1AvzaT8Kex/">Read More</a></button>
           </div>
         </div>
         <div class="cardm">
@@ -308,7 +312,7 @@
             </p>
           </div>
           <div class="btn">
-            <button class="short-pad">R<a href="#">Read More</a></button>
+            <button class="short-pad"><a href="https://web.facebook.com/share/p/12Ej6vJkNXZ/">Read More</a></button>
           </div>
         </div>
         <div class="cardm">
@@ -341,7 +345,7 @@
             </p>
           </div>
           <div class="btn">
-            <button class="short-pad">R<a href="#">Read More</a></button>
+            <button class="short-pad"><a href="https://web.facebook.com/share/p/19rkYcs6kN/">Read More</a></button>
           </div>
         </div>
         <div class="cardm">
@@ -374,7 +378,7 @@
             </p>
           </div>
           <div class="btn">
-       <button class="short-pad">R<a href="#">Read More</a></button>
+       <button class="short-pad"><a href="https://web.facebook.com/share/p/1C7c9nLAya/">Read More</a></button>
           </div>
         </div>
         <div class="cardm">
@@ -407,7 +411,7 @@
             </p>
           </div>
           <div class="btn">
-           <button class="short-pad">R<a href="#">Read More</a></button>
+           <button class="short-pad"><a href="https://web.facebook.com/share/p/1C7c9nLAya/">Read More</a></button>
           </div>
         </div>
         <div class="cardm">
@@ -440,12 +444,85 @@
             </p>
           </div>
           <div class="btn">
-   <button class="short-pad">R<a href="#">Read More</a></button>
+   <button class="short-pad"><a href="https://web.facebook.com/share/p/19vFG3sKHz/">Read More</a></button>
           </div>
         </div>
 
       </div>
     </section>
+  <section class="revise" id="revise">
+        <h2 class="slide gg"><span class="coloredo"> Reviews </span></h2>
+        <br/>
+        <br/>
+       <div class="swiper mySwiper swiperb">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="reviewcard">
+            <div class="reviewhead">
+              <div class="icon">
+                <img src="IMG-20250208-WA0024.jpg" alt="" />
+              </div>
+              <div class="revi">oyedokun kehinde
+              <br/>
+               Co-founder Boot Class
+              </div>
+
+            </div>
+            <div class="reviewtxt">
+              <p>
+          <h2>"</h2>&nbsp; 
+Working with Adediwura at Boot Class has been an absolute pleasure. As the Lead Content Writer, she consistently demonstrates exceptional dedication to her craft. She has a remarkable ability to create high-quality content while maintaining strict adherence to deadlines, ensuring that all materials are delivered promptly without compromising on quality. Her keen attention to detail is evident in her work, as she meticulously refines each piece to align with our brand’s voice and objectives.
+
+Beyond her writing skills, Adediwura is an excellent team player and a natural leader. She effectively coordinates with other members of the team, providing guidance and constructive feedback that elevates the overall quality of our work. Her strong work ethic and execution skills make her an invaluable asset to any content team. Anyone looking for a content creator who is reliable, detail-oriented, and a strong leader would be fortunate to work with her.
+             <h2 class="bbyy">"</h2>  </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      </section>
+        
+  <footer>
+    <h1>Adediwura</h1>
+    <div class="foot_cont">
+      <div class="first_part">
+<div class="headm">
+  <h2>Services</h2>
+</div>
+<div class="tvt">
+  <p><a href="#">Seo Management</a></p>
+  <p><a href="#">Content Writer</a></p>
+  <p><a href="#">Social Media Manager</a></p>
+  <p><a href="#">Blog Writer</a></p>
+</div>
+      </div>
+      <div class="sec_part">
+<div class="headm">
+  <h2>Quick Links</h2>
+</div>
+<div class="tvt">
+   <p><a href="#">Seo Management</a></p>
+  <p><a href="#">Content Writer</a></p>
+  <p><a href="#">Social Media Manager</a></p>
+  <p><a href="#">Blog Writer</a></p>
+</div>
+      </div>
+    </div>
+    <div class="socials">
+       <a href="">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+       <a href="">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+       
+    </div>
+    <hr/>
+    <br/>
+    <p>&copy; Adediwura 2025. All rights reserved</p>
+  </footer>
+         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+   
   </body>
 </html>
