--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             >
             <br />
             <span class="two"
-              >I am a seasoned content writer with 3+ years of experience in
+              >I am a seasoned content writer with 3years+ of experience in
               crafting engaging blog posts, newsletters, carousel's content, and
               strategic content calendars for events’ promotion, authority
               building and 10X sales.</span
@@ -130,7 +130,7 @@
           <br />
           <p>
             <span class="one">
-              A creative wordsmith with 2+ years of experience in crafting
+              A creative wordsmith with 2years+ of experience in crafting
               compelling narratives that resonate with diverse audience.
             </span>
             <br />
@@ -187,11 +187,7 @@
             <hr />
             <div class="card_desc">
               <p>
-                Creation of blog posts that are search engine optimized to
-                explain questions on the mind of your audience, I use their
-                commonly asked questions to curate the topics to talk on. I
-                write this on a section in your website, Medium/Substack
-                accounts or newsletter
+                Creation of blog posts that are search engine optimized. I take your audience's questions out of their mouths, providing clear and concise answers to their questions. These blog articles are suitable for your brand's website, Medium or Substack account and newsletters
               </p>
             </div>
             <div class="btn">
@@ -228,6 +224,30 @@
                 <a href="https://wa.link/7fjsfj">Hire Me Now</a>
               </button>
             </div>
+          </div>
+          <div class="card">
+  <div class="card_img">
+    <img
+         src="top-view-cloud-with-word-seo.jpg"
+      alt="social-media-management img"
+      loading="lazy"
+    />
+  </div>
+  <hr />
+  <div class="card_title">
+    <h2>Social Media Management</h2>
+  </div>
+  <hr />
+  <div class="card_desc">
+    <p>
+      I help you manage and grow your social media presence across platforms like Instagram, X, Facebook, and LinkedIn. From content planning to audience engagement, I ensure your brand voice stays consistent and impactful. I also track analytics to keep your strategy effective.
+    </p>
+  </div>
+  <div class="btn">
+    <button class="short-pad">
+      <a href="https://wa.link/qfeypw">Hire Me Now</a>
+    </button>
+  </div>
           </div>
           <div class="card">
              <div class="card_img">
