--- a/index.html
+++ b/index.html
@@ -59,47 +59,48 @@
   </head>
   <body>
     <nav class="nn">
-      <div class="logo">
-        <h2>Adediwura</h2>
-      </div>
-      <ul>
-        <li>
-          <i class="fa-solid fa-house"></i>&nbsp;
-          <a href="#heros">Home</a>
-        </li>
-        <li>
-          <i class="fa-solid fa-user"></i>&nbsp;<a href="#about">About</a>
-        </li>
-        <li>
-          <i class="fa-solid fa-pen-nib"></i>&nbsp;<a href="#services"
-            >Services</a
-          >
-        </li>
-        <li>
-          <i class="fa-solid fa-pen-nib"></i>&nbsp;<a href="#blogs"
-            >Portfolio</a
-          >
-        </li>
-        <li>
-          <i class="fa-regular fa-star"></i>&nbsp;<a href="#reviews">Reviews</a>
-        </li>
-        <li>
-          <i class="fa-solid fa-envelope"></i>&nbsp;<a href="#contact"
-            >Contact</a
-          >
-        </li>
-      </ul>
-      <div class="ham">
-        <a href="contact.html" target="_blank" class="walink"
-          >Email Me</a
-        >
-<!-- https://wa.link/7d24cp -->
-        <div class="menu-icon" onclick="toggleMenu()">
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-        </div>
-      </div>
+    <nav class="gg">
+  <div class="logo">
+    <a href="index.html">
+      <img
+        src="433247900_1501025224153468_2268206619560454695_n.jpg"
+        alt="Adediwura logo"
+      />
+    </a>
+  </div>
+
+  <ul>
+    <li>
+      <i class="fa-solid fa-house"></i>&nbsp;
+      <a href="#">Home</a>
+    </li>
+    <li>
+      <i class="fa-solid fa-user"></i>&nbsp;
+      <a href="about.html">About</a>
+    </li>
+    <li>
+      <i class="fa-solid fa-calendar-days"></i>&nbsp;
+      <a href="#">Events</a>
+    </li>
+    <li>
+      <i class="fa-solid fa-circle-question"></i>&nbsp;
+      <a href="#">Faqs</a>
+    </li>
+    <li>
+      <i class="fa-solid fa-comments"></i>&nbsp;
+      <a href="#">Testimonials</a>
+    </li>
+    <li>
+      <i class="fa-solid fa-users"></i>&nbsp;
+      <a href="#">All Porters</a>
+    </li>
+  </ul>
+
+  <div class="menu" onclick="opens()">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
     </nav>
 
     <section class="hero" id="heros">
