--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </head>
   <body>
     
-    <nav class="gg">
+    <nav class="ll">
   <div class="logo">
     <a href="index.html">
       <img
