--- a/index.html
+++ b/index.html
@@ -71,29 +71,29 @@
 
   <ul>
     <li>
-      <i class="fa-solid fa-house"></i>&nbsp;
-      <a href="#">Home</a>
-    </li>
-    <li>
-      <i class="fa-solid fa-user"></i>&nbsp;
-      <a href="about.html">About</a>
-    </li>
-    <li>
-      <i class="fa-solid fa-calendar-days"></i>&nbsp;
-      <a href="#">Events</a>
-    </li>
-    <li>
-      <i class="fa-solid fa-circle-question"></i>&nbsp;
-      <a href="#">Faqs</a>
-    </li>
-    <li>
-      <i class="fa-solid fa-comments"></i>&nbsp;
-      <a href="#">Testimonials</a>
-    </li>
-    <li>
-      <i class="fa-solid fa-users"></i>&nbsp;
-      <a href="#">All Porters</a>
-    </li>
+  <i class="fa-solid fa-house"></i>&nbsp;
+  <a href="#heros">Home</a>
+</li>
+<li>
+  <i class="fa-solid fa-user"></i>&nbsp;
+  <a href="#about">About</a>
+</li>
+<li>
+  <i class="fa-solid fa-briefcase"></i>&nbsp;
+  <a href="#services">Services</a>
+</li>
+<li>
+  <i class="fa-solid fa-folder-open"></i>&nbsp;
+  <a href="#blogs">Portfolio</a>
+</li>
+<li>
+  <i class="fa-solid fa-star"></i>&nbsp;
+  <a href="#reviews">Reviews</a>
+</li>
+<li>
+  <i class="fa-solid fa-envelope"></i>&nbsp;
+  <a href="contact.html">Contact</a>
+</li>
   </ul>
 
   <div class="menu" onclick="opens()">
