--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
     <nav class="ll">
   <div class="logo">
     <a href="index.html">
-      <img
-        src="433247900_1501025224153468_2268206619560454695_n.jpg"
-        alt="Adediwura logo"
-      />
+      <h2>Adediwura</h2>
     </a>
   </div>
 
