--- a/index.html
+++ b/index.html
@@ -38,23 +38,24 @@
     />
     <link rel="stylesheet" href="style.css" />
 <!-- Primary Meta Tags -->
-<title>Adediwura Afolabi – Writer & Journalist</title>
-<meta name="title" content="Adediwura Afolabi – Writer & Journalist">
-<meta name="description" content="Official portfolio of Adediwura Afolabi – a passionate writer, journalist, and storyteller shaping narratives with purpose and power.">
+<title>Adediwura Afolabi </title>
+<meta name="title" content="Adediwura Afolabi">
+<meta name="description" content="Official portfolio of Adediwura Afolabi – a passionate writer and storyteller shaping narratives with purpose and power.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://adediwura.netlify.app/">
-<meta property="og:title" content="Adediwura Afolabi – Writer & Journalist">
-<meta property="og:description" content="Official portfolio of Adediwura Afolabi – a passionate writer, journalist, and storyteller shaping narratives with purpose and power.">
+<meta property="og:title" content="Adediwura Afolabi">
+<meta property="og:description" content="Official portfolio of Adediwura Afolabi – a passionate writer and storyteller shaping narratives with purpose and power.">
 <meta property="og:image" content="https://adediwura.netlify.app/IMG-20250113-WA0112.jpg">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://adediwura.netlify.app/">
-<meta name="twitter:title" content="Adediwura Afolabi – Writer & Journalist">
-<meta name="twitter:description" content="Official portfolio of Adediwura Afolabi – a passionate writer, journalist, and storyteller shaping narratives with purpose and power.">
+<meta name="twitter:title" content="Adediwura Afolabi">
+<meta name="twitter:description" content="Official portfolio of Adediwura Afolabi – a passionate writer and storyteller shaping narratives with purpose and power.">
 <meta name="twitter:image" content="https://adediwura.netlify.app/IMG-20250113-WA0112.jpg">
+    <meta name="google-site-verification" content="59eNeRicXl7EP6Gh3Jfg7HYYNrFUntrlZLxEIegC5jw" />                                    
     <title>Adediwura-Seo writer</title>
   </head>
   <body>
